Reove test mode and fix some bugs

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,9 +3,9 @@ env =
     PROM_PAAS_EXPORTER_URL=http://path-to-exporter
     PROM_PAAS_EXPORTER_USERNAME=basic-auth-user
     PROM_PAAS_EXPORTER_PASSWORD=basic_auth-password
-    SCRAPE_INTERVAL=5
+    SCRAPE_INTERVAL_MINUTES=5
     POSTGRES_DSN=dbname=autoscaler_test
     VERBOSE_OUPUT=True
     CF_USERNAME=cf_user
     CF_PASSWORD=cf_pass
-    SLACK_URL=slack_url
+    SLACK_URL=http://slack_url
