--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -31,6 +31,8 @@ pytest-env==0.6.2
 pytest==3.6.1
 python-dateutil==2.7.3    # via freezegun
 python-dotenv==0.8.2
+raven-aiohttp==0.7.0
+raven==6.9.0
 requests==2.18.4
 six==1.11.0               # via freezegun, more-itertools, pytest, python-dateutil
 urllib3==1.22
