--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,8 +7,10 @@
 -e git+http://github.com/amitsaha/aiohttp-prometheus.git#egg=aiohttp_prometheus
 aiohttp==3.3.0
 aiopg==0.14.0
+aioprometheus==18.1.3
 async-generator==1.9
 async-timeout==3.0.0
+asynctest==0.12.1
 atomicwrites==1.1.5       # via pytest
 attrs==18.1.0
 certifi==2018.4.16
@@ -22,6 +24,7 @@ multidict==4.3.1
 oauth2-client==0.0.21
 pluggy==0.6.0             # via pytest
 prometheus-client==0.2.0
+prometheus-metrics-proto==18.1.1
 protobuf==2.6.1
 psycopg2-binary==2.7.4
 psycopg2==2.7.4
@@ -31,6 +34,7 @@ pytest-env==0.6.2
 pytest==3.6.1
 python-dateutil==2.7.3    # via freezegun
 python-dotenv==0.8.2
+quantile-python==1.1
 raven-aiohttp==0.7.0
 raven==6.9.0
 requests==2.18.4
