--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@
 -e git+http://github.com/amitsaha/aiohttp-prometheus.git#egg=aiohttp_prometheus
 aiohttp==3.3.0
 aiopg==0.14.0
+aioprometheus==18.1.3
 async-timeout==3.0.0      # via aiohttp
+asynctest==0.12.1         # via aioprometheus
 attrs==18.1.0             # via aiohttp
 certifi==2018.4.16        # via requests
 chardet==3.0.4            # via aiohttp, requests
@@ -17,10 +19,12 @@ idna==2.6                 # via idna-ssl, requests, yarl
 multidict==4.3.1          # via aiohttp, yarl
 oauth2-client==0.0.21     # via cloudfoundry-client
 prometheus-client==0.2.0
-protobuf==2.6.1           # via cloudfoundry-client
+prometheus-metrics-proto==18.1.1  # via aioprometheus
+protobuf==2.6.1           # via cloudfoundry-client, prometheus-metrics-proto
 psycopg2-binary==2.7.4
 psycopg2==2.7.4
 python-dotenv==0.8.2
+quantile-python==1.1      # via aioprometheus
 raven-aiohttp==0.7.0
 raven==6.9.0
 requests==2.18.4          # via oauth2-client
