--- a/requirements.in
+++ b/requirements.in
@@ -6,6 +6,7 @@ aiohttp
 raven-aiohttp
 raven
 aiopg
-cloudfoundry_client
 python-dotenv
+cloudfoundry-client
 -e git+http://github.com/amitsaha/aiohttp-prometheus.git#egg=aiohttp_prometheus
+#-e git+http://github.com/lgarvey/cf-python-client#egg=cloudfoundry_client
