--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,8 +16,8 @@ attrs==18.1.0
 certifi==2018.4.16
 chardet==3.0.4
 cloudfoundry-client==0.0.22
+coverage==4.5.1           # via pytest-cov
 flake8==3.5.0
-freezegun==0.3.10
 idna-ssl==1.0.1
 idna==2.6
 mccabe==0.6.1             # via flake8
@@ -27,21 +27,25 @@ oauth2-client==0.0.21
 pluggy==0.6.0             # via pytest
 prometheus-client==0.2.0
 prometheus-metrics-proto==18.1.1
-protobuf==3.6.0
+protobuf==3.6.0           # via cloudfoundry-client, prometheus-metrics-proto
 psycopg2-binary==2.7.4
 psycopg2==2.7.4
 py==1.5.3                 # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
+pytest-aiohttp==0.3.0
 pytest-asyncio==0.8.0
+pytest-cov==2.5.1
 pytest-env==0.6.2
+pytest-localserver==0.4.1
+pytest-mock==1.10.0
 pytest==3.6.1
-python-dateutil==2.7.3    # via freezegun
 python-dotenv==0.8.2
 quantile-python==1.1
 raven-aiohttp==0.7.0
 raven==6.9.0
 requests==2.18.4
-six==1.11.0               # via freezegun, more-itertools, pytest, python-dateutil
+six==1.11.0               # via more-itertools, pytest
 urllib3==1.22
+werkzeug==0.14.1          # via pytest-localserver
 yarl==1.2.4
